--- a/PortfolioAce/Views/SystemSecurityPricesView.xaml
+++ b/PortfolioAce/Views/SystemSecurityPricesView.xaml
@@ -64,7 +64,7 @@
                                 <Image Source="/PortfolioAce;component/Resources\icons8-csv-24.png"/>
                             </MenuItem.Icon>
                         </MenuItem>
-                        <MenuItem Header="TXT" IsEnabled="False">
+                        <MenuItem Header="TXT"  Command="{Binding ExportDatagridToTXTCommand}" CommandParameter="{Binding dgSecurityPrices}">
                             <MenuItem.Icon>
                                 <Image Source="/PortfolioAce;component/Resources\icons8-txt-24.png"/>
                             </MenuItem.Icon>
