--- a/PortfolioAce/Views/HomeView.xaml
+++ b/PortfolioAce/Views/HomeView.xaml
@@ -38,6 +38,34 @@
                 <DataGridTextColumn Header="Currency" Binding="{Binding Currency}" Width="SizeToHeader"/>
                 <DataGridTextColumn Header="Price Date" Binding="{Binding FinalisedDate, StringFormat={}{0:dd/MM/yyyy}}" Width="SizeToCells"/>
             </DataGrid.Columns>
+            <DataGrid.ContextMenu>
+                <ContextMenu Style="{DynamicResource MaterialDesignContextMenu}">
+                    <MenuItem Header="Export Data">
+                        <MenuItem Header="CSV" Command="{Binding ExportDataGridToCSVCommand}" CommandParameter="{Binding dgLatestNavPrices}">
+                            <MenuItem.Icon>
+                                <Image Source="/PortfolioAce;component/Resources\icons8-csv-24.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="TXT"  Command="{Binding ExportDataGridToTXTCommand}" CommandParameter="{Binding dgLatestNavPrices}">
+                            <MenuItem.Icon>
+                                <Image Source="/PortfolioAce;component/Resources\icons8-txt-24.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <Separator/>
+                        <MenuItem Header="JSON" Command="{Binding ExportDataGridToJSONCommand}" CommandParameter="{Binding dgLatestNavPrices}">
+                            <MenuItem.Icon>
+                                <Image Source="/PortfolioAce;component/Resources\icons8-json-24.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <Separator/>
+                        <MenuItem Header="PDF" IsEnabled="False">
+                            <MenuItem.Icon>
+                                <Image Source="/PortfolioAce;component/Resources\icons8-pdf-24.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                    </MenuItem>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
         <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="1" Grid.RowSpan="2">
             <materialDesign:Card Padding="10" Margin="20" Name="IntroductionCard">
